# lab2

./: CMakeLists.txt  README.md  main.cpp
header/: ArraySequence.h  BaseCollection.h  DynamicArray.h  LinkedList.h  ListSequence.h  Sequence.h
interface/: CLI.cpp  CLI.h
test/: ImmutableArraySequenceTest.cpp  ImmutableListSequenceTest.cpp  MutableArraySequenceTest.cpp  MutableListSequenceTest.cpp
